--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Document</title>
 </head>
 <body>
+  <title>My title</title>
   
+  <header></header>
+  <main></main>
+  <footer></footer>
 </body>
 </html>
