--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <title>My title</title>
   
-  <header>Header</header>
+  <header></header>
   <main></main>
   <footer></footer>
 </body>
